client/deployment/deployment.yaml
# Deployment
# This part describes deployment configuration i.e.: which containers to run
# how many containers to run, env variables etc
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    project: project
    env: dev
  name: project-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      project: project
      env: dev
  strategy: {}
  template:
    metadata:
      labels:
        project: project
        env: dev
    spec:
      containers: # Container configuration. Here we have only 1 image, but it can have more than one
      - image: registry.abetalife.com/project:dev
        imagePullPolicy: Always
        name: project-dev
        ports:
        - containerPort: 3000
        resources: {}
      imagePullSecrets:
        - name: regcred # regcred secret object contains credentials to auth in our private docker registry
      restartPolicy: Always
      serviceAccountName: ""
status: {}
---
# Service
# This part describes how do we expose deployed containers. This particular configuration says:
# Map some cluster-ip address 80 port to project deployment 3000 port. With this service deployment container is
# available as project-dev:80/
apiVersion: v1
kind: Service
metadata:
  labels:
    project: project
    env: dev
  name: project-dev
spec:
  type: ClusterIP
  ports:
  - name: "http"
    port: 80
    targetPort: 3000
  selector:
    project: project
    env: dev
status:
  loadBalancer: {}
---
# Ingress
# This part describes external access to our services.
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: calculator-ingress-develop
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.allow-http: "false"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  tls:
  - hosts: # cluster will manage certificate for these domains via cert manager. DNS should resolve these domains to ingress load balancer ip
    - project.com
    secretName: project-develop
  rules: # Maps hostname and path to internal service
  - host: project.com
    http:
      paths:
      - path: /
        backend:
          serviceName: project-dev
          servicePort: 80
